src/objects/PMBA_Veeva_Vault_Credentials__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Veeva_Vault_Domain_URL__c</fullName>
        <description>Please enter the veeva vault domain url</description>
        <inlineHelpText>Please enter the veeva vault domain url</inlineHelpText>
        <label>Veeva Vault Domain URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veeva_Vault_Password__c</fullName>
        <description>Please enter the veeva vault password</description>
        <inlineHelpText>Please enter the veeva vault password</inlineHelpText>
        <label>Veeva Vault Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veeva_Vault_Username__c</fullName>
        <description>Please enter the veeva vault username</description>
        <inlineHelpText>Please enter the veeva vault username</inlineHelpText>
        <label>Veeva Vault Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veeva Vault Credentials</label>
</CustomObject>